--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>co.edu.uniquindio.citas/co.edu.uniquindio.citas.HelloApplication</mainClass>
+                            <mainClass>co.edu.uniquindio.citas/co.edu.uniquindio.citas.Application</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
